# ML-geometrydash

./: CMakeLists.txt  CMakePresets.json  mod.json
.github/workflows/: build.yml
src/: main.cpp
